# League-Schedule-Builder

./: .env.local  .vercelignore  DEPLOYMENT.md  DIVISION_NORMALIZATION_FIXES.md  README.md  check-all-divisions.sql  check-divisions.sql  check-rls-status.sql  check-teams-divisions.sql  cleanup-database.sql  cleanup-divisions.sql  complete-database-fix.sql  disable-rls-completely.sql  disable-rls-temporarily.sql  env-template.txt  fix-foreign-key-issue.sql  fix-rls-policies.sql  fix-runs-table.sql  fix-scheduler-params.sql  fix-slots-table.sql  fix-teams-table.sql  nuclear-rls-fix.sql  package-lock.json  package.json  proper-schema.sql  pyproject.toml  remove-eml-column.sql  requirements.txt  safe-database-check.sql  setup-database.js  setup-storage.sql  supabase-migration-clean.sql  supabase-migration-step-by-step.sql  supabase-migration.sql  supabase-setup.sql  supabase-teams-setup.sql  test_real_scheduler.py  test_segment_debug.py  verify-rls-disabled.sql  verify-rls-policies.sql
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
app/: globals.css  layout.tsx  page.tsx
configs/: sample_league.yaml
lib/: supabase.ts  types.ts
prisma/: dev.db  schema.prisma
scheduler/: __init__.py  cli.py  config.py  eml.py  engine.py  export.py  ingest.py  matchups.py  models.py
scheduler_api/: Procfile  days_since_optimizer.py  enhanced_scheduler.py  main.py  requirements.txt  schedule_optimizer.py  scheduler_worker.py  (+3 more)
(+406 files in other folders)
